...
export 'login_model.dart';

/// Landing page upon app initialization; login or sign up.
class LoginWidget extends StatefulWidget {
  const LoginWidget({super.key});

  static String routeName = 'Login';
  static String routePath = '/login';

  @override
  State<LoginWidget> createState() => _LoginWidgetState();
}

...
                              indicatorColor: Colors.transparent,
                              tabs: [
                                Tab(
                                  text: 'Signup',
                                ),
                                Tab(
                                  key: ValueKey('loginTab_hjsx'),
                                  text: 'Log In',
                                ),
                              ],
                              controller: _model.tabBarController,
                              onTap: (i) async {
                                [() async {}, () async {}][i]();
...
                                      Padding(
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            12.0, 0.0, 12.0, 0.0),
                                        child: Container(
                                          width: double.infinity,
                                          child: TextFormField(
                                            key: ValueKey('loginEmail_i052'),
                                            controller:
                                                _model.loginEmailTextController,
                                            focusNode:
                                                _model.loginEmailFocusNode,
                                            onChanged: (_) =>
                                                EasyDebounce.debounce(
...
                                      Padding(
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            12.0, 0.0, 12.0, 0.0),
                                        child: Container(
                                          width: double.infinity,
                                          child: TextFormField(
                                            key: ValueKey('loginPassword_z9te'),
                                            controller: _model
                                                .loginPasswordTextController,
                                            focusNode:
                                                _model.loginPasswordFocusNode,
                                            autofocus: false,
                                            enabled: true,
...
